// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation ElevationFifth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ glJGau"
/>
`;

exports[`Elevation ElevationFirst should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ iXROPa"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ bNLXXQ"
/>
`;

exports[`Elevation ElevationFourth should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ jipRYC"
/>
`;

exports[`Elevation ElevationSecond should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ dHnNDa"
/>
`;

exports[`Elevation ElevationThird should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ eMeQZy"
/>
`;
